Updated Readme and Fixed Alignment Issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-.main {
+main {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -30,4 +30,11 @@
 		}
 	}
 
+}
+
+app-document {
+	height: 90vh !important;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
